--- a/wap/public/index.html
+++ b/wap/public/index.html
@@ -21,13 +21,28 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>CNode-专业技术社区</title>
+    <style>
+      .welcome{
+        text-align: center;
+      }
+      @keyframes rotate{
+        from {transform:rotate(0deg)}
+        to {transform:rotate(360deg)}
+      }
+      .logo-img{
+        animation: rotate infinite 15s linear;
+      }
+    </style>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root">
-      这是初始页面
+      <div class="welcome">
+        <img src="../src/logo.svg" alt="logo" class="logo-img"/>
+        页面加载中,首次加载可能较慢,请耐心等待~
+      </div>
     </div>
     <!--
       This HTML file is a template.
